crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_by_target__doesnt_error_for_internal_task_when_implicit.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(system)" ]
    2 [ label="SyncProject(system, common)" ]
    3 [ label="RunTask(common:internal)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 2 [ ]
}
