crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_by_target__runs_tag.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SyncProject(client)" ]
    2 [ label="SyncProject(server)" ]
    3 [ label="SyncProject(common)" ]
    4 [ label="SyncProject(base)" ]
    5 [ label="RunTask(client:lint)" ]
    6 [ label="RunTask(common:lint)" ]
    2 -> 0 [ ]
    4 -> 0 [ ]
    3 -> 0 [ ]
    3 -> 4 [ ]
    1 -> 0 [ ]
    1 -> 2 [ ]
    1 -> 3 [ ]
    5 -> 1 [ ]
    6 -> 3 [ ]
}
